@@ -3,6 +3,13 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-06-18:
+
+- Fixed a bug where, with the monitor or pipefail option on, the shell
+  failed to wait for all component commands in a pipeline to terminate if
+  the last component command was an external command and the pipeline was
+  the last command in a background subshell.
+
 2022-06-15:
 
 - Fixed a bug where converting an indexed array into an associative array in
